--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="styles/styles.css" />
 		<link rel="stylesheet" href="styles/overlays.css" />
 		<link rel="stylesheet" href="styles/configuration.css" />
+		<link rel="stylesheet" href="styles/game.css" />
 	</head>
 	<body>
 		<div id="backdrop"></div>
@@ -42,7 +43,7 @@
 						<article>
 							<h2>Player 1</h2>
 							<h3>PLAYER NAME</h3>
-							<p>X</p>
+							<p class="player-symbol">X</p>
 							<button class="btn btn-alt">Edit</button>
 						</article>
 					</li>
@@ -50,7 +51,7 @@
 						<article>
 							<h2>Player 2</h2>
 							<h3>PLAYER NAME</h3>
-							<p>O</p>
+							<p class="player-symbol">O</p>
 							<button class="btn btn-alt">Edit</button>
 						</article>
 					</li>
