--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<h2>Player 1</h2>
 							<h3>PLAYER NAME</h3>
 							<p class="player-symbol">X</p>
-							<button class="btn btn-alt">Edit</button>
+							<button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
 						</article>
 					</li>
 					<li>
@@ -52,7 +52,7 @@
 							<h2>Player 2</h2>
 							<h3>PLAYER NAME</h3>
 							<p class="player-symbol">O</p>
-							<button class="btn btn-alt">Edit</button>
+							<button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
 						</article>
 					</li>
 				</ol>
