--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" href="styles/overlays.css" />
 		<link rel="stylesheet" href="styles/configuration.css" />
 		<link rel="stylesheet" href="styles/game.css" />
+		<script src="scripts/config.js" defer></script>
+		<script src="scripts/game.js" defer></script>
+		<script src="scripts/app.js" defer></script>
 	</head>
 	<body>
 		<div id="backdrop"></div>
@@ -23,13 +26,22 @@
 		<main>
 			<aside class="modal" id="config-overlay">
 				<h2>Choose your name</h2>
+
 				<form>
 					<div class="form-control">
 						<label for="playername">Player name</label>
-						<input type="text" name="playername" id="playername" />
+						<input
+							type="text"
+							name="playername"
+							id="playername"
+							required />
 					</div>
+					<p id="config-errors"></p>
 					<div>
-						<button type="button" class="btn btn-alt">
+						<button
+							type="reset"
+							class="btn btn-alt"
+							id="cancel-config-btn">
 							Cancel
 						</button>
 						<button type="submit" class="btn">Confirm</button>
@@ -40,23 +52,33 @@
 			<section id="game-configuration">
 				<ol>
 					<li>
-						<article>
+						<article id="player-1-data">
 							<h2>Player 1</h2>
 							<h3>PLAYER NAME</h3>
 							<p class="player-symbol">X</p>
-							<button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
+							<button
+								class="btn btn-alt"
+								id="edit-player-1-btn"
+								data-playerid="1">
+								Edit
+							</button>
 						</article>
 					</li>
 					<li>
-						<article>
+						<article id="player-2-data">
 							<h2>Player 2</h2>
 							<h3>PLAYER NAME</h3>
 							<p class="player-symbol">O</p>
-							<button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
+							<button
+								class="btn btn-alt"
+								id="edit-player-2-btn"
+								data-playerid="2">
+								Edit
+							</button>
 						</article>
 					</li>
 				</ol>
-				<button class="btn">Start New Game</button>
+				<button class="btn" id="start-game-btn">Start New Game</button>
 			</section>
 
 			<section id="active-game">
@@ -70,17 +92,17 @@
 					<span id="active-player-name">PLAYER NAME</span>!
 				</p>
 				<ol id="game-board">
-					<li class="disabled">X</li>
 					<li></li>
 					<li></li>
-
-					<li></li>
-					<li class="disabled">O</li>
 					<li></li>
 
 					<li></li>
 					<li></li>
-					<li class="disabled">X</li>
+					<li></li>
+
+					<li></li>
+					<li></li>
+					<li></li>
 				</ol>
 			</section>
 		</main>
