--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 			<section id="game-configuration">
 				<ol>
-					<li>
+					<li data-col="" data-row="">
 						<article id="player-1-data">
 							<h2>Player 1</h2>
 							<h3>PLAYER NAME</h3>
@@ -64,7 +64,7 @@
 							</button>
 						</article>
 					</li>
-					<li>
+					<li data-col="" data-row="">
 						<article id="player-2-data">
 							<h2>Player 2</h2>
 							<h3>PLAYER NAME</h3>
@@ -92,17 +92,15 @@
 					<span id="active-player-name">PLAYER NAME</span>!
 				</p>
 				<ol id="game-board">
-					<li></li>
-					<li></li>
-					<li></li>
-
-					<li></li>
-					<li></li>
-					<li></li>
-
-					<li></li>
-					<li></li>
-					<li></li>
+					<li data-row="1" data-col="1"></li>
+					<li data-row="1" data-col="2"></li>
+					<li data-row="1" data-col="3"></li>
+					<li data-row="2" data-col="1"></li>
+					<li data-row="2" data-col="2"></li>
+					<li data-row="2" data-col="3"></li>
+					<li data-row="3" data-col="1"></li>
+					<li data-row="3" data-col="2"></li>
+					<li data-row="3" data-col="3"></li>
 				</ol>
 			</section>
 		</main>
